@@ -1,1 +1,1 @@
-757727da360225ea50cfd6dc3cca4924  addons.xml
+7781ee4acea775e85c5547f421fcc401  addons.xml
